[gd_scene load_steps=9 format=3 uid="uid://b2nnqlso52w8i"]

[ext_resource type="Texture2D" uid="uid://dlh8e7ojcbm1m" path="res://Assets/Background/sprite.jpg" id="1_6824p"]
[ext_resource type="Script" path="res://Scenes/scene_test/scene_test.gd" id="1_hu4i4"]
[ext_resource type="PackedScene" uid="uid://b572r5ogjp4eh" path="res://Scenes/note_area/note_area.tscn" id="3_m5afr"]
[ext_resource type="PackedScene" uid="uid://bx4d6qgheb0w3" path="res://Scenes/score/score.tscn" id="4_eh1wr"]
[ext_resource type="PackedScene" uid="uid://cushr7vcbodso" path="res://Scenes/combo/combo.tscn" id="5_ky5dw"]

[sub_resource type="Animation" id="Animation_ljmqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start"]
}

[sub_resource type="Animation" id="Animation_nddd4"]
resource_name = "phase"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Inicio", "", "Final"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(19.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_phase"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3j3hs"]
_data = {
"RESET": SubResource("Animation_ljmqf"),
"phase": SubResource("Animation_nddd4")
}

[node name="SceneTest" type="Node2D"]
script = ExtResource("1_hu4i4")

[node name="BG" type="Sprite2D" parent="."]
scale = Vector2(36.0313, 20.3438)
texture = ExtResource("1_6824p")
centered = false

[node name="NoteArea" parent="." instance=ExtResource("3_m5afr")]
position = Vector2(100, 324)

[node name="MarkerNoteArea" type="Marker2D" parent="."]
position = Vector2(1250, 324)

[node name="TimerNote" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="NoteContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" parent="CanvasLayer" instance=ExtResource("4_eh1wr")]

[node name="Combo" parent="CanvasLayer" instance=ExtResource("5_ky5dw")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Label")
libraries = {
"": SubResource("AnimationLibrary_3j3hs")
}

[node name="Label" type="Label" parent="."]
offset_left = 466.0
offset_top = 200.0
offset_right = 701.0
offset_bottom = 337.0
theme_override_font_sizes/font_size = 100
text = "Start"

[connection signal="timeout" from="TimerNote" to="." method="_on_timer_note_timeout"]
